--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ span{
 }
 
 .service-title{
-  width: 100%;
+  width: 1351px;
   display: flex;
   justify-content: center;
 }
@@ -157,14 +157,14 @@ span{
 }
 
 .card {
-    width: 450.78px;
-    height: 450.78px;
-    object-fit: cover;
+  width: 450.78px;
+  height: 450.78px;
+  object-fit: cover;
   position: relative;
   cursor: pointer;
   border-radius: 10px;
   background-color: white;
-            box-shadow: 0 0 0.8125rem 0 rgb(196, 183, 1183);
+  box-shadow: 0 0 0.8125rem 0 rgb(196, 183, 1183);
             
 }
 
@@ -217,7 +217,7 @@ span{
 }
 
 .project-title{
-    width: 91.5%;
+  width: 1351px;
   display: flex;
   justify-content: center;
   padding-top: 68.3px;
@@ -285,13 +285,138 @@ span{
   opacity: 1;
     transform: rotateX(0deg);
 }
+.counter-title{
+  width: 1351px;
+}
+.counter-container{
+  width: 1351px;
+}
+.counter-title > h2{
+  display: flex;
+  justify-content: center;
+  background-color: #a0d8f1;
+  font-size: 40.98px;
+  color: rgb(40, 40, 40);
+  font-weight: bold;
+  padding-bottom: 25px;
+  padding-top: 69px;
+}
+
+.counter-boxes{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-top: 380px;
+  height: 840px;
+  background-color: #a0d8f1;
+  position: relative;
+}
+.counter-boxes::before{
+  content: "";
+  position: absolute;
+  width: 375px;
+  height: 1px;
+  border-top: 1px solid #333333;
+  top: 458px;
+  left: 50%;
+  transform: translateX(-50%) rotate(-45deg);
+}
+
+.counter-box1, .counter-box2, .counter-box3, .counter-box4{
+  width: 255px;
+  height: 255px;;
+  background-color: lightblue;
+  transform: rotate(45deg);
+  position: relative;
+}
+
+.counter-box2, .counter-box4{
+  margin-top: -185px;
+}
+
+.counter-text{
+  width: 255px;
+  height: 255px;;
+  transform: rotate(-45deg);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.counter-icon{
+  font-size: 63px;
+  color: rgb(5,188,237);
+}
+
+.counter-heading1, .counter-heading2, .counter-heading3, .counter-heading4{
+  font-family: "Play", sans-serif;
+  font-size: 60px;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: 6px;
+  margin-top: 18px;
+}
+
+.counter-content{
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+  color: #ffffff;
+}
+
+.counter-box1::before{
+  content: "";
+  position: absolute;
+  width: 373px;
+  height: 256px;
+  top: -1px;
+  bottom: -2px;
+  border-left: 1px solid #333333;
+  border-top: 1px solid #333333;
+}
+
+.counter-box2::before{
+  content: "";
+  position: absolute;
+  width: 630px;
+  height: 375px;
+  top: -58px;
+  left: -57px;
+  border-left: 1px solid #333333;
+  border-top: 1px solid #333333;
+}
+
+.counter-box3::before{
+  content: "";
+  position: absolute;
+  width: 634px;
+  height: 632px;
+  left: -63px;
+  bottom: -315px;
+  border-left: 1px solid #333333;
+  border-top: 1px solid #333333;
+}
+
+.counter-box4::before{
+  content: "";
+  position: absolute;
+  width: 630px;
+  height: 630px;
+  left: -375px;
+  bottom: -376px;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+}
+
 .sectors-container{
+  width: 1351px;
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23333333' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23898989'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
 
 }
 .sectors-title{
-    width: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -338,7 +463,7 @@ span{
   left: 0;
   width: 100%;
   height: 100%;
-    transition: 0.6s;
+  transition: 0.6s;
 }
 
 .sectors-back{
